--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,60 @@
-# Terraform
-terraform/.terraform/
-terraform/.terraform.lock.hcl
-terraform/terraform.tfstate
-terraform/terraform.tfstate.backup
-terraform/*.tfvars
-terraform/.terraform.tfstate.lock.info
+# Local .terraform directories
+**/.terraform/*
 
-# Logs
-*.log
+# .tfstate files
+*.tfstate
+*.tfstate.*
 
-# Backup files
-backups/
-*.tar.gz
+# Crash log files
+crash.log
+crash.*.log
 
-# OS files
-.DS_Store
-Thumbs.db
+# Exclude all .tfvars files, which are likely to contain sensitive data (password, secret keys, etc)
+*.tfvars
+*.tfvars.json
 
-# IDE
+# Ignore override files as they are usually used to override resources locally and so
+# are not checked in
+override.tf
+override.tf.json
+*_override.tf
+*_override.tf.json
+
+# Include override files you do wish to add to version control using negated pattern
+# !example_override.tf
+
+# Include tfplan files to ignore the plan output of command: terraform plan -out=tfplan
+# example: *tfplan*
+
+# Ignore CLI configuration files
+.terraformrc
+terraform.rc
+
+# Terragrunt cache directory
+.terragrunt-cache/
+
+# Terraform lock file (optional - some teams prefer to commit this)
+# .terraform.lock.hcl
+
+# IDE and editor files
 .vscode/
 .idea/
+*.swp
+*.swo
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Backup files
+*.backup
+*.bak
+
+# Terraform plan output files
+*.tfplan
+plan.out
