--- a/.gitignore
+++ b/.gitignore
@@ -1,60 +1,27 @@
-# Local .terraform directories
-**/.terraform/*
+# Ignore all Terraform configuration files except .tf scripts
 
-# .tfstate files
+# Ignore Terraform state files
 *.tfstate
 *.tfstate.*
-
-# Crash log files
+# Ignore crash logs
 crash.log
-crash.*.log
-
-# Exclude all .tfvars files, which are likely to contain sensitive data (password, secret keys, etc)
+# Ignore Terraform variables files
 *.tfvars
 *.tfvars.json
-
-# Ignore override files as they are usually used to override resources locally and so
-# are not checked in
+# Ignore override files
 override.tf
 override.tf.json
 *_override.tf
 *_override.tf.json
-
-# Include override files you do wish to add to version control using negated pattern
-# !example_override.tf
-
-# Include tfplan files to ignore the plan output of command: terraform plan -out=tfplan
-# example: *tfplan*
-
-# Ignore CLI configuration files
+# Ignore Terraform plan files
+*.tfplan
+# Ignore .terraform directory
+.terraform/
+# Ignore backup files
+*.backup
+# Ignore terraformrc
 .terraformrc
 terraform.rc
 
-# Terragrunt cache directory
-.terragrunt-cache/
-
-# Terraform lock file (optional - some teams prefer to commit this)
-# .terraform.lock.hcl
-
-# IDE and editor files
-.vscode/
-.idea/
-*.swp
-*.swo
-
-# OS generated files
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
-
-# Backup files
-*.backup
-*.bak
-
-# Terraform plan output files
-*.tfplan
-plan.out
+# Do NOT ignore .tf scripts
+!*.tf
