--- a/.github/workflows/backup-pipeline.yml
+++ b/.github/workflows/backup-pipeline.yml
@@ -90,7 +90,7 @@ jobs:
               run: docker-compose up
 
             - name: Upload Logs as a Build Artifact
-              uses: actions/upload-artifact@v3
+              uses: actions/upload-artifact@v4  # Update to the latest version
               with:
                 name: backup-logs-${{ github.run_id }}
                 path: ./logs/
