feat: add SNS_TOPIC_ARN to environment variables in Docker Compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
       - AWS_ACCESS_KEY_ID
       - AWS_SECRET_ACCESS_KEY
       - AWS_REGION
+      - SNS_TOPIC_ARN
     volumes:
       # Mount backup directory
       - ./backups:/data/source_files
