--- a/.github/workflows/backup-pipeline.yml
+++ b/.github/workflows/backup-pipeline.yml
@@ -17,7 +17,7 @@ jobs:
 
         steps:
             - name: Checkout Repository Code
-              uses: actions/checkout@v3
+              uses: actions/checkout@v4
 
             - name: Lint Bash Script with ShellCheck
               uses: ludeeus/action-shellcheck@master
@@ -25,12 +25,12 @@ jobs:
                 scandir: './'
 
             - name: Setup Terraform
-              uses: hashicorp/setup-terraform@v2
+              uses: hashicorp/setup-terraform@v3
               with:
                 terraform_version: '1.5.6'
 
-            - name: Validate Terraform Confuguration
-              run: terraform -chdir=./terraform init && terraform -chdir=./terraform validate
+            - name: Validate Terraform Configuration
+              run: terraform -chdir=./terraform init -backend=false && terraform -chdir=./terraform validate
 
     build:
         name: Build & Push Docker Image
@@ -39,10 +39,10 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - name: Checkout Repository Code
-              uses: actions/checkout@v3
+              uses: actions/checkout@v4
 
             - name: Log to Docker Hub
-              uses: docker/login-action@v2
+              uses: docker/login-action@v3
               with:
                 username: ${{ secrets.DOCKERHUB_USERNAME }}
                 password: ${{ secrets.DOCKERHUB_TOKEN }}
@@ -73,25 +73,17 @@ jobs:
                 aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
                 aws-region: us-east-1
 
-            - name: Login to Docker Hub
-              uses: docker/login-action@v2
-              with: 
-                username: ${{ secrets.DOCKERHUB_USERNAME }}
-                password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-            - name: Pull the specific Docker Image version
-              run: docker pull ${{ secrets.DOCKERHUB_USERNAME }}/aws-s3-backup:${{ github.sha }}
-
-            - name: Update docker-compose.yml to use specific image version
+            - name: Run Backup Script via Docker
               run: |
-                sed -i 's|image: aws-s3-backup:latest|image: ${{ secrets.DOCKERHUB_USERNAME }}/aws-s3-backup:${{ github.sha }}|g' docker-compose.yml
+                docker run --rm \
+                  -e AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} \
+                  -e AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} \
+                  -e AWS_SESSION_TOKEN=${{ secrets.AWS_SESSION_TOKEN }} \
+                  -e AWS_REGION=us-east-1 \
+                  -e SNS_TOPIC_ARN=${{ secrets.SNS_TOPIC_ARN }} \
+                  ${{ secrets.DOCKERHUB_USERNAME }}/aws-s3-backup:latest \
+                  terraform-backup-test-mjay-sysH
 
-            #Install Docker Compose
-            - name: Install Docker Compose
-              run: sudo apt-get update && sudo apt-get install -y docker-compose
-
-            - name: Run Backup using Docker Compose
-              run: docker-compose up
 
             
 
