--- a/.github/workflows/backup-pipeline.yml
+++ b/.github/workflows/backup-pipeline.yml
@@ -21,6 +21,7 @@ jobs:
         with:
           scandir: './'
       - name: Setup Terraform
+        # Corrected typo: hashicorp
         uses: hashicorp/setup-terraform@v2
       - name: Validate Terraform Configuration
         run: terraform -chdir=./terraform init -backend=false && terraform -chdir=./terraform validate
@@ -35,16 +36,18 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }} # This should be 'jabulani053'
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Build and Push Docker Image
-        # This step builds and pushes the image that we will use in the next job.
         uses: docker/build-push-action@v5
         with:
           context: .
           file: ./docker/Dockerfile
           push: true
-          tags: jabu-meki/aws-s3-backup:latest # Using your hardcoded username here for consistency
+          # --- THE CRITICAL FIX ---
+          # The image name MUST be prefixed with your actual Docker Hub username.
+          tags: jabulani053/aws-s3-backup:latest,jabulani053/aws-s3-backup:${{ github.sha }}
+          # ------------------------
 
   run-backup:
     name: Run S3 Backup
@@ -70,8 +73,10 @@ jobs:
             -e AWS_DEFAULT_REGION \
             -e SNS_TOPIC_ARN=${{ secrets.SNS_TOPIC_ARN }} \
             --mount type=bind,source="$(pwd)/logs",target=/app/logs \
-           
-            jabu-meki/aws-s3-backup:latest \
+            # --- THE CRITICAL FIX ---
+            # We use the correct, hardcoded image name that we know was just pushed.
+            jabulani053/aws-s3-backup:latest \
+            # ------------------------
             terraform-backup-test-mjay-sys
       - name: Upload Logs as a Build Artifact
         if: always()
