--- a/.github/workflows/backup-pipeline.yml
+++ b/.github/workflows/backup-pipeline.yml
@@ -63,7 +63,7 @@ jobs:
           aws-region: us-east-1
       - name: Create Logs Directory on Runner
         run: mkdir -p ./logs
-      - name: Run Backup Script via Docker
+      - name: Run Backup Script via Docker (Final Test)
         run: |
           docker run --rm \
             -e AWS_ACCESS_KEY_ID \
@@ -71,12 +71,9 @@ jobs:
             -e AWS_SESSION_TOKEN \
             -e AWS_REGION \
             -e AWS_DEFAULT_REGION \
-            -e SNS_TOPIC_ARN=${{ secrets.SNS_TOPIC_ARN }} \
+            # --- THE SNS_TOPIC_ARN LINE HAS BEEN COMPLETELY REMOVED FOR THIS TEST ---
             --mount type=bind,source="$(pwd)/logs",target=/app/logs \
-            # --- THE CRITICAL FIX ---
-            # We use the correct, hardcoded image name that we know was just pushed.
             jabulani053/aws-s3-backup:latest \
-            # ------------------------
             terraform-backup-test-mjay-sys
       - name: Upload Logs as a Build Artifact
         if: always()
