--- a/.github/workflows/backup-pipeline.yml
+++ b/.github/workflows/backup-pipeline.yml
@@ -66,12 +66,10 @@ jobs:
       - name: Run Backup Script via Docker (Final Test)
         run: |
           docker run --rm \
-            -e AWS_ACCESS_KEY_ID \
-            -e AWS_SECRET_ACCESS_KEY \
-            -e AWS_SESSION_TOKEN \
-            -e AWS_REGION \
-            -e AWS_DEFAULT_REGION \
-            # --- THE SNS_TOPIC_ARN LINE HAS BEEN COMPLETELY REMOVED FOR THIS TEST ---
+            -e AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} \
+            -e AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} \
+            -e AWS_REGION=us-east-1 \
+            -e AWS_DEFAULT_REGION=us-east-1 \
             --mount type=bind,source="$(pwd)/logs",target=/app/logs \
             jabulani053/aws-s3-backup:latest \
             terraform-backup-test-mjay-sys
