--- a/.github/workflows/backup-pipeline.yml
+++ b/.github/workflows/backup-pipeline.yml
@@ -185,9 +185,9 @@ jobs:
         with:
           commit_message: "chore: Update cost analysis report"
           file_pattern: reports/cost_analysis_report.csv
-          commit_user_name: github-actions
-          commit_user_email: github-actions@github.com
-          commit_author: GitHub Actions
+          commit_user_name: "github-actions"
+          commit_user_email: "github-actions-bot@users.noreply.github.com"
+          commit_author: "GitHub Actions Bot <github-actions-bot@users.noreply.github.com>"
 
       - name: Upload Cost Reports as an Artifact
 
