--- a/.github/workflows/backup-pipeline.yml
+++ b/.github/workflows/backup-pipeline.yml
@@ -139,7 +139,7 @@ jobs:
 
     permissions:
       contents: write
-
+      id-token: write
       
     steps:
       - name: Checkout Repository Code
@@ -148,9 +148,9 @@ jobs:
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY}}
+          role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
           aws-region: us-east-1
+          role-session-name: GitHubActionsBackup
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
